--- a/package.json
+++ b/package.json
@@ -2,18 +2,52 @@
   "name": "quizbot",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.ts",
   "scripts": {
-    "dev": "ts-node index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "tsx server/index.ts",
+    "build": "tsx script/build.ts",
+    "start": "NODE_ENV=production node dist/index.cjs"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-zod": "^0.8.3",
+    "express": "^4.21.2",
+    "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
+    "pg": "^8.16.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.68.0",
+    "tailwind-merge": "^3.4.0",
+    "wouter": "^3.8.1",
+    "zod": "^4.1.13",
+    "zod-validation-error": "^5.0.0"
   },
   "devDependencies": {
+    "@replit/vite-plugin-cartographer": "^0.4.4",
+    "@replit/vite-plugin-dev-banner": "^0.1.1",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/express": "^4.17.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.6.3"
+    "@types/node": "^25.0.2",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "drizzle-kit": "^0.31.8",
+    "esbuild": "^0.27.1",
+    "tsx": "^4.0.0",
+    "typescript": "^5.6.3",
+    "vite": "^7.2.7"
   }
 }
