Add Render deployment support and fix database connection

--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,8 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/quizzes/index.ts": {
-      "maxDuration": 10
-    },
-    "api/quizzes/[id].ts": {
+    "api/**/*.ts": {
+      "includeFiles": "server/**",
       "maxDuration": 10
     }
   }
