--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
-        run: npm run build
+      - name: Build static site
+        run: npm run build:static
         env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL || 'https://ekaykrxsfwpfzsmzxegj.supabase.co' }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVrYXlrcnhzZndwZnpzbXp4ZWdqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3NTA3NDAsImV4cCI6MjA4MTMyNjc0MH0.sFHWTUcCanHvmByQtZ0CjGXJwRJ3CWodifVF84joM6U' }}
+          GITHUB_PAGES: true
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
