--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx server/index.ts",
     "build": "tsx script/build.ts",
-    "build:static": "vite build",
+    "build:static": "vite build && cp dist/public/index.html dist/public/404.html",
     "start": "NODE_ENV=production node dist/index.cjs",
     "vercel-build": "npm run build"
   },
